09. semester/MlaskalCompiler/public-ro/mlc/du6/tests/du6-test11.out
Error (line 12): Expression may not be passed by reference
There were some errors 1 and warnings 0
