09. semester/MlaskalCompiler/public-ro/mlc/du6/tests/du6-test11.icmout
ERROR: Requested bad value type on IP=20
